5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1577_996.log
== SUBMITION (2019-03-19 18:15:13) 
-- CODE:
print("***** ")
print("* 0 0 * ")
print("* ^ * ")
print("* --- * ")
print(" *****")
-- EXECUTION TIME:
0.234926
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* 0 0 * 
* ^ * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:15:17) 
-- CODE:
print("***** ")
print("* 0 0 * ")
print("* ^ * ")
print("* --- * ")
print(" *****")
-- EXECUTION TIME:
0.158232
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* 0 0 * 
* ^ * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:15:25) 
-- CODE:
print("***** ")
print("* 0 0 * ")
print("* ^ * ")
print("* --- * ")
print("*****")
-- EXECUTION TIME:
0.157691
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* 0 0 * 
* ^ * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:15:34) 
-- CODE:
print("***** ")
print("* 0 0 * ")
print("* ^ * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.155169
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* 0 0 * 
* ^ * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:15:55) 
-- CODE:
print("***** ")
print("* 0 0 * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.227614
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* 0 0 * 
*  ^  * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:16:06) 
-- CODE:
print("***** ")
print("* 0 0 * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.213338
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* 0 0 * 
*  ^  * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:16:39) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.158734
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
*  ^  * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:16:42) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.146391
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
*  ^  * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:16:45) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.156955
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
*  ^  * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:17:03) 
-- CODE:
print(" ***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.196882
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
*  ^  * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:17:05) 
-- CODE:
print(" ***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.13325
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
*  ^  * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:17:21) 
-- CODE:
print("*****")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print("*****")
-- EXECUTION TIME:
0.142161
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o * 
*  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:17:34) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  * ")
print("* --- * ")
print("*****")
-- EXECUTION TIME:
0.214327
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:17:36) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  * ")
print("* --- * ")
print("*****")
-- EXECUTION TIME:
0.141197
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:08:51) 
-- CODE:
print(*****)
print(* o o *)
print("*  ^  * ")
print("* --- * ")
print("*****")
-- EXECUTION TIME:
0.154698
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:09:47) 
-- CODE:
print(*****)
print(* o o *)
print( *  ^  * )
print(* --- * )
print(*****)
-- EXECUTION TIME:
0.141487
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:09:50) 
-- CODE:
print(*****)
print(* o o *)
print( *  ^  * )
print(* --- * )
print(*****)
-- EXECUTION TIME:
0.164788
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:09:54) 
-- CODE:
print(*****)
print(* o o *)
print( *  ^  * )
print(* --- * )
print(*****)
-- EXECUTION TIME:
0.173099
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:09:56) 
-- CODE:
print(*****)
print(* o o *)
print( *  ^  * )
print(* --- * )
print(*****)
-- EXECUTION TIME:
0.144227
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:09:59) 
-- CODE:
print(*****)
print(* o o *)
print( *  ^  * )
print(* --- * )
print(*****)
-- EXECUTION TIME:
0.132313
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:11:33) 
-- CODE:
print(*****)
print(* o o *)
print( *  ^  * )
print(* --- * )
print(*****)
-- EXECUTION TIME:
0.153283
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:14:45) 
-- CODE:
print("")
print(" * o o *")
print("* ^ *"  )
print("*---*" )
print("*****")
-- EXECUTION TIME:
0.235517
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* o o *
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:15:39) 
-- CODE:
print("*****")
print(" * o o *")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.157237
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 * o o *
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:15:42) 
-- CODE:
print("*****")
print(" * o o *")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.218592
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 * o o *
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:16:59) 
-- CODE:
print("*****")
print("* o o *")
print(" *  ^  * ")
print("* --- *")
print(" ***** ")
-- EXECUTION TIME:
0.155436
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
 *  ^  * 
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:18:28) 
-- CODE:
print("*****")
print("* o o *")
print(" (*  ^  *) ")
print("* --- *")
print(" ***** ")
-- EXECUTION TIME:
0.146962
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
 (*  ^  *) 
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:18:31) 
-- CODE:
print("*****")
print("* o o *")
print(" (*  ^  *) ")
print("* --- *")
print(" ***** ")
-- OUTPUT:
*****
* o o *
 (*  ^  *) 
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:18:36) 
-- CODE:
print("*****")
print("* o o *")
print(" (*  ^  *) ")
print("* --- *")
print(" ***** ")
-- EXECUTION TIME:
0.145064
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
 (*  ^  *) 
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:18:39) 
-- CODE:
print("*****")
print("* o o *")
print(" (*  ^  *) ")
print("* --- *")
print(" ***** ")
-- OUTPUT:
*****
* o o *
 (*  ^  *) 
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:20:03) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.139079
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
* ^ *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
